--- a/GraphQLTransport/GraphQLTransport.csproj
+++ b/GraphQLTransport/GraphQLTransport.csproj
@@ -11,6 +11,7 @@
 	<ItemGroup>
 		<PackageReference Include="HotChocolate.AspNetCore" Version="13.0.2" />
 		<PackageReference Include="HotChocolate.Data.EntityFramework" Version="13.0.2" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
 	</ItemGroup>
 
 	<ItemGroup>
